less/groups.less
[component="groups/container"] {
	margin-top: 300px;

	[component="groups/summary"] {
		.panel-body {
			min-height: 72px;
		}

		.list-cover {
			background-size: cover;
			min-height: 125px;
			background-position: 50% 50%;
			.pointer;

			h3 {
				background-color: rgba(0,0,0,0.5);
				display: inline-block;
				padding: 0.25em 0.5em;
				color: white;
				font-weight: bold;
				text-transform: capitalize;
			}
		}

		.members {
			padding-left: 0;

			> li {
				list-style-type: none;
				display: inline-block;

				img {
					width: 32px;
					height: 32px;
				}
			}

			.truncated {
				vertical-align: bottom;
			}
		}
	}

	[component="groups/cover"] {
		background-size: cover;
		background-repeat: no-repeat;
		min-height: 200px;
		position: relative;
		margin-bottom: 1em;
		background-origin: content-box;
		width: 100%;
		top: 50px;
		position: absolute;
		left: auto;
		right: 0px;

		&.initialised:hover {
			.controls {
				opacity: 0.5;
			}
		}

		.controls {
			text-align: center;
			min-height: 200px;
			line-height: 200px;
			.opacity(0);
			.transition(opacity .15s linear);
			cursor: pointer;
			pointer-events: none;

			> * {
				pointer-events: all;
			}
		}

		@media (min-width: @screen-md-min) {
			min-height: 300px;

			.controls {
				min-height: 300px;
				line-height: 300px;
			}
		}

		&.active {
			&:hover {
				cursor: move;
			}

			.controls {
				> * {
					display: none;
				}
			}

			.save {
				display: inline-block;
			}
		}

		&.saving {
			.save {
				display: none;
			}

			.indicator {
				display: inline-block;
			}
		}

		.save, .indicator {
			display: inline-block;
			position: absolute;
			top: 1em;
			right: 2em;
			opacity: 1;
			background-color: @brand-primary;
			color: #eee;
			padding: 0.5em;
			font-weight: bold;

			&:hover {
				cursor: pointer;
			}
		}

		.save {
			display: none;
		}

		.indicator {
			display: none;
		}
	}

	[component="groups/members"], [component="groups/pending"], [component="groups/invited"] {
		img {
			width: 32px;
		}

		.member-name {
			vertical-align: middle;
		}
	}

	[component="groups/members"] {
		tbody {
			max-height: 500px;
			display:block;
			overflow-y: auto;
			.member-name {
				width: 100%;
			}
		}
	}
}

